syntax = "proto3";

package goledger.v1;

option go_package = "github.com/iho/goledger/internal/adapter/grpc/pb/goledger/v1;goledgerv1";

import "google/protobuf/timestamp.proto";

// Account represents a ledger account
message Account {
  string id = 1;
  string name = 2;
  string currency = 3;
  string balance = 4; // decimal as string
  string encumbered_balance = 5; // decimal as string
  int64 version = 6;
  bool allow_negative_balance = 7;
  bool allow_positive_balance = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// Transfer represents a money movement
message Transfer {
  string id = 1;
  string from_account_id = 2;
  string to_account_id = 3;
  string amount = 4; // decimal as string
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp event_at = 6;
  map<string, string> metadata = 7;
  optional string reversed_transfer_id = 8;
}

// Entry represents a ledger entry
message Entry {
  string id = 1;
  string account_id = 2;
  string transfer_id = 3;
  string amount = 4; // decimal as string
  string account_previous_balance = 5; // decimal as string
  string account_current_balance = 6; // decimal as string
  int64 account_version = 7;
  google.protobuf.Timestamp created_at = 8;
}

// Hold represents a fund reservation
message Hold {
  string id = 1;
  string account_id = 2;
  string amount = 3; // decimal as string
  string status = 4; // active, captured, voided, expired
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  optional google.protobuf.Timestamp expires_at = 7;
  map<string, string> metadata = 8;
}
